# mmmpypack

./: pyproject.toml  run.py  setup.py  test.py
app/mmm-pypack/src/: MMMFeatureSelection.py
app/mmm_pypack/: __init__.py
app/mmmpypack/: __init__.py
app/mmmpypack/src/: LegacyModel.py  Model.py  Transform4Test.py
