[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmmpypack"
version = "0.0.1"
authors = [
  { name="Squad MMM", email="author@example.com" },
]
description = "Biblioteca de modelagem MMM"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
